2-kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: efk-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:7.10.1
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
        volumeMounts:
          - name:  kibana-config
            mountPath: /usr/share/kibana/config/kibana.yml
            subPath: kibana.yml
      volumes:
        - name:  kibana-config
          configMap:
            name: kibana-config
