kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk-logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
